# nostr

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  TODO.md  check-docker-engine.sh  generate_coverage.sh  pre_build.sh
.github/workflows/: check-and-lint.yml  deploy.yml  tests.yml
client/: Cargo.toml  Makefile  example.env
client-example/: Cargo.toml
client-example/src/: main.rs
client/src/: client.rs  db.rs  lib.rs  main.rs  pool.rs  schnorr.rs
client/src/database/: keys_table.rs  mod.rs  subscriptions_table.rs
crates/client/: Cargo.toml  Makefile  example.env
crates/client/src/: lib.rs  main.rs  pool.rs
crates/client/src/database/: keys_table.rs
crates/nostr-sdk/: Cargo.toml  Makefile  README.md  example.env
crates/nostr-sdk/src/: lib.rs  schnorr.rs
crates/nostr-sdk/src/client/: mod.rs
crates/nostr-sdk/src/client/communication_with_relay/: mod.rs
crates/nostr-sdk/src/client/database/: keys_table.rs  subscriptions_table.rs
crates/nostr-sdk/src/event/: mod.rs  tag.rs
crates/nostr-sdk/src/relay/: database.rs  mod.rs  pool.rs
crates/nostr-sdk/src/relay/communication_with_client/: eose.rs  mod.rs  notice.rs
crates/nostr-sdk/src/relay/receive_from_client/: close.rs  event.rs  request.rs
crates/nostr-sdk/src/relay/send_to_client/: mod.rs
crates/relay/: Cargo.toml  Dockerfile  Makefile  README.md  example.env
crates/relay/src/: db.rs  main.rs
crates/relay/src/receive_from_client/: request.rs
crates/relay/src/send_to_client/: mod.rs
examples/: sent_by_the_client.txt
githooks/: README.md  pre-commit  pre-push
nostr-sdk/: Cargo.toml  Makefile
nostr-sdk/src/: filter.rs  lib.rs  schnorr.rs
nostr-sdk/src/client_to_relay_communication/: close.rs  event.rs  mod.rs  request.rs
nostr-sdk/src/event/: id.rs  marker.rs  mod.rs  tag.rs
nostr-sdk/src/relay_to_client_communication/: event.rs  mod.rs
relay/: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  nginx.conf  pre_build.sh
relay/src/: client_to_relay_comm.rs  client_to_relay_comms.rs  db.rs  event.rs  filter.rs  lib.rs  main.rs  relay.rs  schnorr.rs
relay/src/client_to_relay_communication/: close.rs  event.rs  mod.rs  request.rs  types.rs
relay/src/event/: id.rs  kind.rs  mod.rs  tag.rs
relay/src/receive_from_client/: close.rs  event.rs  mod.rs  request.rs
relay/src/relay_to_client_communication/: eose.rs  event.rs  mod.rs  notice.rs  types.rs
relay/src/send_to_client/: mod.rs
schnorr/: Cargo.toml
schnorr-example/: README.md
schnorr-example/src/: main.rs
schnorr/src/: main.rs
server/: Cargo.toml
server-example/src/: main.rs
server/src/: main.rs
