[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.25"
futures-util = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = "*"
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"