[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bitcoin_hashes = { version = "0.11.0", features = ["std"] }
secp256k1 = { version = "0.25.0", features = ["rand-std", "bitcoin-hashes-std"] }
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
redb = "0.16.0"
nostr-sdk = { path = "../nostr-sdk" }
env_logger = { version = "0.10.0", features = ["color"] }
log = "0.4.17"
dotenv = "0.15.0"
hex = "0.4.3"