[package]
name = "nostr-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.25.0", features = ["rand-std", "bitcoin-hashes-std"] }
bitcoin_hashes = { version = "0.11.0", features = ["std"] }
rand = "0.8.5"
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
redb = "0.16.0"
thiserror = "1.0.40"
env_logger = { version = "0.10.0", features = ["color"] }
log = "0.4.17"

[dev-dependencies]
pretty_assertions = "1.3.0"
