[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.11.0"
rand = "0.8.5"
secp256k1 = { version = "0.25.0", features = ["rand-std", "bitcoin-hashes-std"] }
futures-channel = "0.3.25"
futures-util = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = "*"
uuid = { version = "1.2.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
