[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = { version = "0.11.0", features = ["std"] }
rand = "0.8.5"
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
redb = "0.16.0"
thiserror = "1.0.40"
nostr-sdk = { path = "../nostr-sdk" }
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
pretty_assertions = "1.3.0"
