[package]
name = "relay"
version = "0.1.0"
edition = "2021"
authors = ["Guilherme Pereira <guilospanck@protonmail.com>"]
description = "A relay implementation for the Nostr protocol"
readme = "README.md"
repository = "https://github.com/Guilospanck/nostr/tree/main/relay"
license = "MIT"
keywords = ["nostr", "server", "relay"]
categories = ["network-programming", "web-programming"]

[dependencies]
bitcoin_hashes = { version = "0.11.0", features = ["std"] }
rand = "0.8.5"
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
redb = "0.16.0"
thiserror = "1.0.40"
nostr-sdk = { path = "../nostr-sdk" }
env_logger = { version = "0.10.0", features = ["color"] }
log = "0.4.17"
dotenv = "0.15.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
