[package]
name = "guilospanck-nostr-sdk"
description = "A simple implementation of nostr relay and client"
version = "0.1.0"
edition = "2021"
authors = ["Guilospanck <guilospanck@protonmail.com>"]
license-file = "LICENSE"
homepage = "https://github.com/Guilospanck/nostr/"
repository = "https://github.com/Guilospanck/nostr/tree/main/crates/nostr-sdk/"
readme = "README.md"
keywords = ["nostr", "relay", "client"]

[dependencies]
secp256k1 = { version = "0.25.0", features = ["rand-std", "bitcoin-hashes-std"] }
bitcoin_hashes = { version = "0.11.0", features = ["std"] }
rand = "0.8.5"
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
redb = "0.16.0"
thiserror = "1.0.40"
env_logger = { version = "0.10.0", features = ["color"] }
log = "0.4.17"
dotenv = "0.15.0"
hex = "0.4.3"
url = "2.3.1"
uuid = { version = "1.2.2", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[dev-dependencies]
pretty_assertions = "1.3.0"
